<resources>
    <string name="app_name">Votely</string>
    <string name="welcome_to_vote_me">Welcome to Votely!</string>
    <string name="app_welcome_icon">app welcome icon</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="register_here"><u>Not a user? Register here!</u></string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_to_votely">Welcome to Votely</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? sign in here</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="please_enter_your_details"><u>Please enter your details</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_image">user image</string>
    <string name="this_is_a_question">This is a Question!</string>
    <string name="this_is_option_one">This is Option one</string>
    <string name="this_is_option_two">This is Option two</string>
    <string name="this_is_option_three">This is option three</string>
    <string name="this_is_option_four">This is option four</string>
</resources>