<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/expletus_sans_semibold"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_welcome_icon"
        android:src="@drawable/tick_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/mailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/expletus_sans_semibold"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailBox"
        app:layout_constraintEnd_toEndOf="@+id/emailBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailBox" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/expletus_sans_semibold"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordBox"
        app:layout_constraintEnd_toEndOf="@+id/passwordBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordBox" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordBox"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginStart="16dp"
        app:endIconTint="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        app:hintEnabled="false"
        android:background="@drawable/edit_text_bg"
        app:hintTextColor="@color/white"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="15"
            android:background="#2CB3B3B3"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:minHeight="48dp"
            android:textColorHint="#757575"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/expletus_sans_semibold"
        android:padding="10dp"
        android:text="@string/register_here"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/buttonbackground"
        android:paddingLeft="125dp"
        android:paddingRight="125dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox" />
</androidx.constraintlayout.widget.ConstraintLayout>